src/objects/User.object
<CustomObject>
    <fields>
        <fullName>KS_IDSAP__c</fullName>
        <inlineHelpText>El formato del campo Número de Personal (ID SAP) es: 00000XXX (8 carácteres en total, donde el id va precedido de tantos 0s como haga falta para completar la longitud)</inlineHelpText>
        <label>Número de Personal (SAP)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_LongId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LongId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Responsable_Nivel_3__c</fullName>
        <label>Responsable Nivel 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Responsable_Nivel_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nivel1__c</fullName>
        <label>nivel1</label>
        <relationshipName>Usuarios</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
        <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
        <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
        <label>Campaign Monitor User</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KS_IDSAP__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Usuarios Activos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>KS_IDSAP__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MARKETING_USER</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrador del sistema</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>system</value>
        </filters>
        <label>Usuarios administradores activos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MARKETING_USER</columns>
        <columns>KS_IDSAP__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>KS_Responsable_Nivel_3__c</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.STATE_CODE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los usuarios</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MARKETING_USER</columns>
        <columns>KS_IDSAP__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>KS_Responsable_Nivel_3__c</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.STATE_CODE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Usuarios Inactivos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Usuarios_Activos_Licencia_Salesforce</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter External User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Usuarios Activos Licencia Salesforce</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Usuarios_Comerciales_SPA</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>SIM - Comercial</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Usuarios Comerciales SPA</label>
        <language>es</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Control_mascara_id_usuario</fullName>
        <active>true</active>
        <description>Controla que el id de SAP de usuario que se introduce cumple con los requisitos (longitud de 8 carácteres, donde todos los carácteres no usados se indican con 0 precedentes al número)</description>
        <errorConditionFormula>LEN( KS_IDSAP__c )  &lt;&gt; 8</errorConditionFormula>
        <errorMessage>El Número de Personal, se compone de 8 carácteres, donde el id debe de ir precedido de tantos 0s como haga falta, hasta completar la longitud del campo.</errorMessage>
    </validationRules>
</CustomObject>